# ComfyUI-FalAI

./: .gitignore  __init__.py  import_schemas.py  node.py  pyproject.toml  requirements.txt  schema_to_node.py  supported_models.json
schemas/: fal-ai_flux-2_klein_9b_edit.json  fal-ai_seedvr_upscale_image.json
tests/: test_schema.py
